--- a/assets/app.css
+++ b/assets/app.css
@@ -45,47 +45,11 @@ nav.my-nav-top a:active {
 }
 
 /*
- * Blockquotes are "misused" as info blocks
+ * Blockquote styling
  */
 div[role="main"] blockquote {
-  color: #0e5a3f;
-  border-left: 5px solid #1cb27e;
-  padding: 10px;
-  position: relative;
-  padding-left: 10px;
-}
-
-/*
- * As the theme is using Font Awesome either way we can make use of it for
- * displaying a small (i) icon.
- */
-div[role="main"] blockquote::before {
-  font-family: "FontAwesome";
-  position: absolute;
-  top: 10px;
-  left: -30px;
-  color: #127e58;
-  font-style: normal;
-  content: "\f05a";
-}
-
-/*
- * The parser adds a paragraph inside the blockquote, so we have to remove the
- * bottom margin on these.
- */
-div[role="main"] blockquote p { margin-bottom: 0px; }
-
-/*
- * Links in these boxes should have different colours.
- */
-div[role="main"] blockquote a {
-  color: inherit;
-  text-decoration: underline;
-}
-
-div[role="main"] blockquote a:hover {
-  color: inherit;
-  text-decoration: none;
+  border-left: 2px solid #1cb27e;
+  padding-left: 20px;
 }
 
 /*
